@@ -1,3 +1,7 @@
+2011-12-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/devdescr.cc (attiny4313): New entry.
+
 2011-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* src/jtagio.cc (jtag1::initJtagOnChipDebugging): Drop the
